[gd_scene load_steps=6 format=3 uid="uid://bxm7qhkwxhxm7"]

[ext_resource type="Script" path="res://scripts/ui/ShivkaariCardsUI.gd" id="1_cards_script"]
[ext_resource type="FontFile" uid="uid://whleu8n62eg" path="res://assets/fonts/EB_Garamond/static/EBGaramond-Bold.ttf" id="2_title_font"]
[ext_resource type="FontFile" uid="uid://c0bcyxcwoyxkr" path="res://assets/fonts/EB_Garamond/static/EBGaramond-Regular.ttf" id="3_regular_font"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_title_font")
font_size = 36
font_color = Color(0.9, 0.8, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_card_title"]
font = ExtResource("2_title_font")
font_size = 24
font_color = Color(0.9, 0.8, 0.6, 1)

[node name="ShivkaariCardsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_cards_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -30.0

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shivkaari Cards Collection"
label_settings = SubResource("LabelSettings_title")

[node name="CloseButton" type="Button" parent="MainContainer/Header"]
layout_mode = 2
text = "Close (ESC)"

[node name="Separator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardsGrid" type="ScrollContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="GridContainer" type="GridContainer" parent="MainContainer/ContentContainer/CardsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="CardDetails" type="Panel" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="DetailsContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/CardDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="CardTitle" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = "Select a card to view details"
label_settings = SubResource("LabelSettings_card_title")
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardCategory" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="Separator2" type="HSeparator" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2

[node name="CardDescription" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = ""
autowrap_mode = 2
size_flags_vertical = 3

[node name="HistoricalValue" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = ""
autowrap_mode = 2
modulate = Color(0.9, 0.7, 0.3, 1)

[node name="DetailedExplanation" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = ""
autowrap_mode = 2
size_flags_vertical = 3

[node name="RelatedCharacter" type="Label" parent="MainContainer/ContentContainer/CardDetails/DetailsContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 2
modulate = Color(0.7, 0.7, 0.9, 1) 